--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div class="bg-[#202329] h-screen rounded-r-2xl w-80" 
         id="Contact-menu">
 
-                <div id="search-bar"class="flex justify-center pt-11 mb-5 ">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" class="w-12 h-16 bg-[#2E333D] fill-slate-500 rounded-l-lg cursor-pointer">
-                        <path d="M 21 3 C 11.601563 3 4 10.601563 4 20 C 4 29.398438 11.601563 37 21 37 C 24.355469 37 27.460938 36.015625 30.09375 34.34375 L 42.375 46.625 L 46.625 42.375 L 34.5 30.28125 C 36.679688 27.421875 38 23.878906 38 20 C 38 10.601563 30.398438 3 21 3 Z M 21 7 C 28.199219 7 34 12.800781 34 20 C 34 27.199219 28.199219 33 21 33 C 13.800781 33 8 27.199219 8 20 C 8 12.800781 13.800781 7 21 7 Z"/>
-                    </svg>
-                    <input type="search" class="border-0 focus:border-black h-16 rounded-r-lg bg-[#2E333D] P-3 ">
+                    <div id="search-bar"class="flex justify-center pt-11 mb-5 ">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" class="w-12 h-16 bg-[#2E333D] fill-slate-500 rounded-l-lg cursor-pointer">
+                            <path d="M 21 3 C 11.601563 3 4 10.601563 4 20 C 4 29.398438 11.601563 37 21 37 C 24.355469 37 27.460938 36.015625 30.09375 34.34375 L 42.375 46.625 L 46.625 42.375 L 34.5 30.28125 C 36.679688 27.421875 38 23.878906 38 20 C 38 10.601563 30.398438 3 21 3 Z M 21 7 C 28.199219 7 34 12.800781 34 20 C 34 27.199219 28.199219 33 21 33 C 13.800781 33 8 27.199219 8 20 C 8 12.800781 13.800781 7 21 7 Z"/>
+                        </svg>
+                        <input type="search" class="border-0 focus:border-black h-16 rounded-r-lg bg-[#2E333D] P-3 " placeholder="SEARCH">
                     </div>
                     
                     <div id="contact-list" class=" overflow-scroll h-3/4 overflow-x-hidden cursor-pointer p-2 w-80">
@@ -92,9 +92,31 @@
                                     <p class="text-slate-300 opacity-50 text-xs">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit....
                                     </p>
-                                    <div class="bg-[#1ca2ef] rounded-3xl w-8 text-center">
+                                    <div class="bg-[#1ca2ef] rounded-3xl w-8 h-6 text-center">
                                         <span>1</span>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="contact-info-in-list" class="flex align-middle hover:bg-[#34393c] px-6 h-20 hover:rounded-lg">
+                            <div id="avatar" class="font-bold bg-blue-500 w-20 h-14 rounded-lg text-center pt-3 text-2xl my-auto">
+                                <span>AR</span>
+                            </div>
+                            <DIV id="contact-info-in-list-text" class="w-full ml-2">
+                                <div class="flex justify-between items-center">
+                                <h3 id="contact-name" class="mt-3 font-bold text-lg text-slate-500">
+                                    Aref
+                                </h3>
+                                <h4 class="text-slate-400 text-sm mt-3">
+                                    4:29 pm
+                                </h4>
+                            </DIV>
+                            <div class="flex justify-between text-center">
+                                <p class="text-slate-300 opacity-50 text-xs">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit....
+                                </p>
+                                <div class="bg-[#1ca2ef] rounded-3xl w-8 h-6 text-center">
+                                    <span>1</span>
                                 </div>
                             </div>
                         </div>
